--- a/app/styles.module.css
+++ b/app/styles.module.css
@@ -4,7 +4,7 @@
   flex-wrap: wrap;
   flex-direction: row;
   justify-content: center;
-  align-items: start;
+  align-items: flex-start;
 }
 
 .repos {
@@ -28,7 +28,7 @@
 .aux > div {
   overflow: hidden;
   display: flex;
-  justify-content: start;
+  justify-content: flex-start;
   flex-direction: column;
 }
 
