--- a/app/components/Pipelines/styles.module.css
+++ b/app/components/Pipelines/styles.module.css
@@ -2,6 +2,7 @@
   display: flex;
   flex-direction: column;
   flex-grow: 1;
+  gap: 0.25rem;
   overflow: hidden;
   overflow-y: auto;
   height: calc(50% - 1.25rem);
@@ -13,7 +14,6 @@
   justify-content: space-between;
   flex-direction: column;
   width: 100%;
-  margin-top: 0.25rem;
   border-radius: 0.25rem;
   padding: 0.5rem;
   background-color: var(--card-color);
@@ -68,7 +68,6 @@
 }
 
 .skeleton {
-  margin-top: 0.25rem;
   border-radius: 0.25rem;
   padding: 0.25rem;
   background-color: var(--card-color);
