--- a/app/components/Repos/styles.module.css
+++ b/app/components/Repos/styles.module.css
@@ -2,14 +2,12 @@
   display: flex;
   justify-content: space-between;
   width: 100%;
-  margin-top: 0.25rem;
   border-radius: 0.25rem;
   padding: 0.5rem;
   background-color: var(--card-color);
 }
 
 .skeleton {
-  margin-top: 0.25rem;
   border-radius: 0.25rem;
   padding: 0.25rem;
   background-color: var(--card-color);
@@ -60,6 +58,7 @@
   display: flex;
   flex-direction: column;
   flex-grow: 1;
+  gap: 0.25rem;
   overflow: hidden;
   overflow-y: auto;
   height: calc(100% - 2.5rem);
@@ -80,7 +79,7 @@
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
-  max-width: 15rem;
+  max-width: 20rem;
   margin-bottom: 0;
 }
 
