--- a/app/components/Toggle/styles.module.css
+++ b/app/components/Toggle/styles.module.css
@@ -1,59 +1,32 @@
-.switch {
-  position: relative;
-  display: inline-block;
-  width: 60px;
-  height: 34px;
+.selected {
+  color: var(--ifm-color-primary) !important;
+  text-shadow: 0 0 8px var(--ifm-color-primary);
+  font-size: 0.875rem; /* 14px */
+  line-height: 1.25rem; /* 20px */
+  color: var(--muted-color);
+  text-transform: uppercase;
+  font-weight: bolder;
 }
 
-.switch input {
-  opacity: 0;
-  width: 0;
-  height: 0;
+.not-selected {
+  color: var(--muted-color);
+  font-size: 0.875rem; /* 14px */
+  line-height: 1.25rem; /* 20px */
+  color: var(--muted-color);
+  text-transform: uppercase;
+  font-weight: bolder;
 }
 
-.slider {
-  position: absolute;
+.clickable {
   cursor: pointer;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  background-color: #ccc;
-  -webkit-transition: 0.4s;
-  transition: 0.4s;
+  color: var(--muted-color);
+  font-size: 0.875rem; /* 14px */
+  line-height: 1.25rem; /* 20px */
+  color: var(--muted-color);
+  text-transform: uppercase;
+  font-weight: bolder;
 }
 
-.slider:before {
-  position: absolute;
-  content: '';
-  height: 26px;
-  width: 26px;
-  left: 4px;
-  bottom: 4px;
-  background-color: white;
-  -webkit-transition: 0.4s;
-  transition: 0.4s;
-}
-
-.switch input:checked + .slider {
-  background-color: var(--ifm-color-primary);
-}
-
-.switch input:focus + .slider {
-  box-shadow: 0 0 1px var(--ifm-color-primary);
-}
-
-.switch input:checked + .slider:before {
-  -webkit-transform: translateX(26px);
-  -ms-transform: translateX(26px);
-  transform: translateX(26px);
-}
-
-/* Rounded sliders */
-.slider.round {
-  border-radius: 34px;
-}
-
-.slider.round:before {
-  border-radius: 50%;
+.clickable:hover {
+  color: var(--ifm-color-primary);
 }
